# toolchain

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
LICENSE/: android-toolchain  vitasdk
cmake_toolchain/: CMakeLists.txt  dolce.cmake  dolce.toolchain.cmake  vita.cmake  vita.toolchain.cmake
src/: CMakeLists.txt  dolce-make-bootparam.c  dolce-make-pkg.py  elf-create-argp.c  elf-create-argp.h  sce-elf-defs.h  sce-elf.c  sce-elf.h  self.h  vita-elf-create.c  vita-elf-export.c  vita-libs-gen.c  vita-make-bootparam.c  vita-make-fself.c  vita-mksfoex.c  vita-pack-vpk.c
